# Dokku-Server

./: .env.deploy  .env.example  .gitignore  : """  : false,   AGENTS.md  AUDIT-KIMI.md  AUDIT-KIMI2.md  CHANGELOG.md  CODE-REVIEW-1.md  CODE-REVIEW-2.md  COVERAGE.md  DEPLOYMENT-PLAN.md  FIXES_COMPLETE.md  FIXES_PLAN.md  MCP-USAGE.md  PRD KimiDokku MCP.md  PRODUCTION-TEST-REPORT.md  Procfile  README.md  pyproject.toml  requirements.txt
.opencode/: openwork.json
.opencode/private/: telegram-bot.env  vps-config.env
ansible/: inventory.ini  site.yml
docs/: OPERATIONS.md
docs/Dokku-project/: AGENT.md  AI_AGENT_DEPLOY_GUIDE.md  MIGRATION.md  TOOLS.md
examples/hello-world/: README.md  package.json  server.js
keys/: README.md  clawtech-vps.pub
keys/dokku-deploy/: README.md  id_ed25519  id_ed25519.pub
landing/: TechSpec.md
landing/app/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/: deploy-landing.sh
scripts/cron/: update-geoip.sh
src/kimidokku/: __init__.py  auth.py  config.py  csrf.py  database.py  db_schema.sql  dokku_sync.py  exceptions.py  main.py  mcp_server.py  models.py  tasks.py
src/kimidokku_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: base.html  dashboard.html  security.html
templates/apps/: detail.html  (+1 more)
tests/: conftest.py  test_api_keys_rest.py  test_app_lifecycle.py  test_auth.py  test_config.py  test_exceptions.py  test_health.py  test_integration.py  test_mcp_resources.py  test_mcp_tools.py  test_rate_limit.py  test_security.py  test_webhook_verify.py  test_webhooks.py
(+60 files in other folders)
